[gd_scene load_steps=10 format=2]

[ext_resource path="res://KinematicBody2D_slacker.gd" type="Script" id=1]
[ext_resource path="res://Green-Cap-Character-16x18.png" type="Texture" id=2]
[ext_resource path="res://coins.png" type="Texture" id=3]
[ext_resource path="res://ore.png" type="Texture" id=4]
[ext_resource path="res://candy.png" type="Texture" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.0

[sub_resource type="Animation" id=2]
resource_name = "down"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("slacker:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}

[sub_resource type="Animation" id=3]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("slacker:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 8 ]
}

[sub_resource type="Animation" id=4]
resource_name = "up"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("slacker:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 3, 5 ]
}

[node name="KinematicBody2D_slacker" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, 5 )
shape = SubResource( 1 )

[node name="slacker" type="Sprite" parent="."]
modulate = Color( 0.929412, 0.713726, 0.713726, 1 )
use_parent_material = true
position = Vector2( 0.5, 3.5 )
scale = Vector2( 5.5625, 5.05556 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 6

[node name="AnimationPlayer_slacker" type="AnimationPlayer" parent="."]
anims/down = SubResource( 2 )
anims/left = SubResource( 3 )
anims/up = SubResource( 4 )

[node name="Label_money" type="Label" parent="."]
margin_left = -98.7107
margin_top = -136.464
margin_right = -58.7107
margin_bottom = -122.464
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 1, 0.941176, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.945098, 0, 1 )
text = "0"
align = 2

[node name="coins" type="Sprite" parent="Label_money"]
position = Vector2( 44.3949, 5.39393 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
vframes = 4

[node name="Label2" type="Label" parent="Label_money"]
margin_left = 50.1109
margin_top = 2.70711
margin_right = 69.1109
margin_bottom = 16.7071
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Before Tax"
mouse_filter = 1
text = "BT"

[node name="Label_ore" type="Label" parent="."]
margin_left = -101.418
margin_top = -167.172
margin_right = -60.4178
margin_bottom = -153.172
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.890196, 0.905882, 0.980392, 1 )
text = "0"
align = 2

[node name="ore" type="Sprite" parent="Label_ore"]
position = Vector2( 45.4825, 6.06551 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )

[node name="Label_candy" type="Label" parent="."]
margin_left = -97.468
margin_top = -198.879
margin_right = -58.468
margin_bottom = -184.879
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0.92549, 0.4, 0.831373, 1 )
custom_colors/font_color_shadow = Color( 0.713726, 0.207843, 0.207843, 1 )
text = "0"
align = 2

[node name="candy" type="Sprite" parent="Label_candy"]
position = Vector2( 44.9825, 5.06551 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Label_after_taxes" type="Label" parent="."]
margin_left = -97.4645
margin_top = -107.414
margin_right = -58.4645
margin_bottom = -92.4142
rect_scale = Vector2( 2, 2 )
hint_tooltip = "After Tax"
custom_colors/font_color = Color( 0.890196, 0.560784, 0.290196, 1 )
text = "0"
align = 2

[node name="coins2" type="Sprite" parent="Label_after_taxes"]
position = Vector2( 43.602, 6.3697 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )
vframes = 4

[node name="Label" type="Label" parent="Label_after_taxes"]
margin_left = 49.7573
margin_top = 1.99999
margin_right = 68.7573
margin_bottom = 18.0
rect_scale = Vector2( 0.5, 0.5 )
hint_tooltip = "Ater Tax"
mouse_filter = 1
text = "AT"

[node name="Button_pay_taxes" type="Button" parent="."]
margin_left = 27.4213
margin_top = -130.757
margin_right = 99.4213
margin_bottom = -110.757
text = "Pay taxes"

[node name="Button_buy_candies" type="Button" parent="."]
margin_left = 25.0071
margin_top = -102.121
margin_right = 114.007
margin_bottom = -82.1213
text = "Buy candies"

[node name="Button_sell_ore" type="Button" parent="."]
margin_left = 26.5929
margin_top = -162.172
margin_right = 86.5929
margin_bottom = -142.172
text = "Sell ore"
[connection signal="pressed" from="Button_pay_taxes" to="." method="_on_Button_pay_taxes_pressed"]
[connection signal="pressed" from="Button_buy_candies" to="." method="_on_Button_buy_candies_pressed"]
[connection signal="pressed" from="Button_sell_ore" to="." method="_on_Button_sell_ore_pressed"]
